extends Node2D
class_name GameBoard

signal PlayerWin
signal PlayerNextTurn

var TscnRall: PackedScene = preload("res://board/rall.tscn")
var TscnBoardPiece : PackedScene = preload("res://board/board_piece.tscn")

var ralldrop01 = preload("res://assets/Sounds/ralldrop01.mp3")
var ralldrop02 = preload("res://assets/Sounds/ralldrop02.mp3")
var ralldrop03 = preload("res://assets/Sounds/ralldrop03.mp3")
var ralldrops = [ralldrop01, ralldrop02, ralldrop03]


@onready var board_start_pos = $BoardStartPos
@onready var inspacter = $Inspacter

var base_size = 34

# 646 * 646
# 보드 모양
var board : Array = [
	[0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 9, 4, 4, 4, 4, 4, 9, 4, 4, 4, 4, 4, 9, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 9, 4, 4, 4, 4, 4, 9, 4, 4, 4, 4, 4, 9, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 9, 4, 4, 4, 4, 4, 9, 4, 4, 4, 4, 4, 9, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[3, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 5],
	[6, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 8],
]
var currentYX = []

#알위치
var rallMap: Array = [
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
	[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
]

func _ready():
	inspacter.play()

func BoardRender():
	for row in range(len(board)) :
		for col in range(len(board[row])):
			
			var tmpBoardPiece : BoardPiece = TscnBoardPiece.instantiate()
			board_start_pos.add_child(tmpBoardPiece)
			tmpBoardPiece.SetBoardPosition(row, col)
			tmpBoardPiece.pieceType = board[row][col]
			tmpBoardPiece.position = Vector2(col * base_size, row * base_size)
			tmpBoardPiece.connect("PieceOver", onPieceOver)
			tmpBoardPiece.connect("PieceClick", onPieceClick)

func ChanchInspacter(b):
	if b:
		inspacter.show()
	else:
		inspacter.hide()

func onPieceOver(boardPosition):
	print(boardPosition)
	currentYX = boardPosition
	var xpos = board_start_pos.position.x + (boardPosition[1] * base_size) + (base_size/2)
	var ypos = board_start_pos.position.y + (boardPosition[0] * base_size) + (base_size/2)
	inspacter.position = Vector2(xpos, ypos)

func onPieceClick(boardPosition):
	if MainData.currentGameState == MainData.GameState.PLAY:
		# 이미 돌이 있는 경우
		if rallMap[boardPosition[0]][boardPosition[1]] != 0:
			return
		
		# 규칙 위반 체크(쌍삼, 쌍사)
			
		
		var r = randi_range(0, ralldrops.size()-1)
		
		$AudioStreamPlayer.stream = ralldrops[r]
		$AudioStreamPlayer.play()
		
		
		rallMap[boardPosition[0]][boardPosition[1]] = MainData.currentTrue

		var tmpRall = TscnRall.instantiate()
		$RallPos.add_child(tmpRall)
		var xpos = board_start_pos.position.x + (boardPosition[1] * base_size) + (base_size/2)
		var ypos = board_start_pos.position.y + (boardPosition[0] * base_size) + (base_size/2)
		tmpRall.position = Vector2(xpos, ypos)
		tmpRall.frame = MainData.currentTrue
		
		
		
		if 1 == 0:		# 승리
			emit_signal("PlayerWin")
		else:				# 다음턴
			emit_signal("PlayerNextTurn")
